--- a/config-service/src/main/resources/application.yaml
+++ b/config-service/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
     config:
       server:
         git:
-          default-label: multiples instancias
+          default-label: multiple-instances
           uri: https://github.com/jmanuel37/Microservicios-tutoriales2            
           search-paths: config-data
   application:
