--- a/eureka-service/pom.xml
+++ b/eureka-service/pom.xml
@@ -43,6 +43,13 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 		</dependency>
+	<!-- https://mvnrepository.com/artifact/com.netflix.eureka/eureka-client -->
+	<dependency>
+		<groupId>com.netflix.eureka</groupId>
+		<artifactId>eureka-client</artifactId>
+		<version>1.10.14</version>
+		<scope>runtime</scope>
+	</dependency>
 		
 
 
