--- a/usuario-service/pom.xml
+++ b/usuario-service/pom.xml
@@ -59,6 +59,22 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+		</dependency>
+		
+		<dependency>
+    	<groupId>org.springframework.boot</groupId>
+   		 <artifactId>spring-boot-starter-aop</artifactId>
+    		<version>2.7.5</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
